@@ -42,8 +42,8 @@ class VP6VideoEncoder(VideoEncoder):
 
 class VP6Step(VideoEncoderStep):
     name = 'Flash VP6 Video Encoder'
-    sidebar_name = 'Flash VP6 Video'
-    glade_file = os.path.join(os.path.dirname(os.path.abspath(__file__)),
+    sidebarName = 'Flash VP6 Video'
+    gladeFile = os.path.join(os.path.dirname(os.path.abspath(__file__)),
                               'vp6-wizard.glade')
     component_type = 'vp6'
 
