@@ -1,3 +1,10 @@
+2008-05-08  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/component/encoders/flv/flv_wizard.py:
+	* flumotion/component/encoders/flv/vp6_wizard.py:
+	* flumotion/component/encoders/mp3/mp3_wizard.py:
+	glade_file -> gladeFile and section_name -> sectionName
+
 2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/encoders/mp3/mp3.xml:
